[project]
name = "dfa-gym"
version = "0.1.0"
description = "Gymnasium environment for solving DFAs and wrapping other environments with DFA goals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dfax",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
dfax = { path = "../dfax" }
